k8s/10-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ifconfig
  namespace: ifconfig
  labels:
    app: ifconfig.me
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ifconfig.me
  template:
    metadata:
      labels:
        app: ifconfig.me
    spec:
      tolerations:
      # this toleration is to have the daemonset runnable on master nodes
      # remove it if your masters can't run pods
      # - key: node-role.kubernetes.io/master
      #   effect: NoSchedule
      containers:
      - name: ifconfig
        image: patrickfmarques/ifconfig.me:latest
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: http
          containerPort: 80
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: ifconfig
  namespace: ifconfig
  labels:
    app: ifconfig.me
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: ifconfig.me
