k8s/30-netowrk-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
  namespace: ifconfig
spec:
  podSelector:
    matchLabels:
      app: ifconfig.me
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          gateway.envoyproxy.io/owning-gateway-name: public
    ports:
    - protocol: TCP
      port: 80

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ipv6
  namespace: ifconfig
spec:
  podSelector:
    matchLabels:
      app: ifconfig.me
  policyTypes:
  - Ingress
  ingress:
  - {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-opentelemetry
  namespace: ifconfig
spec:
  podSelector:
    matchLabels:
      app: ifconfig.me
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: opentelemetry-collector
      namespaceSelector:
        matchLabels:
           kubernetes.io/metadata.name: observability
    ports:
    - protocol: TCP
      port: 4317
      endPort: 4318
